bugfix: Country card was sometimes leaving extra space above the image
----------------
 CHANGES
 ----------------
- Changed display property of country card from block to flex for better layout.
- Set flex-direction to column for country card to enhance structure.

--- a/src/app/shared/ui/country-card/country-card.component.scss
+++ b/src/app/shared/ui/country-card/country-card.component.scss
@@ -12,7 +12,8 @@
   font: inherit;
   width: 100%;
   padding: 0;
-  display: block;
+  display: flex;
+  flex-direction: column;
 
   &:hover {
     transform: translateY(-2px);
@@ -27,6 +28,7 @@
   background: #eee;
 
   img {
+    display: block;
     width: 100%;
     height: 100%;
     object-fit: cover;
